feat: 입찰 상태 변경에 따른 스크립트 작성, 알람, 공급자 추가